--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <p class="subtext">Hint: If you're new to crafting, start with a crafting table it unlocks everything else!</p>
                     </div>
                     <div class="start-image">
-                        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/9/93/Crafting_Table_JE3_BE2.png/revision/latest?cb=20190606093431" alt="Crafting Table" width="120">
+                        <img src="images/crafting table.png" alt="Crafting Table" width="120">
                     </div>
                 </div>
             
@@ -127,7 +127,7 @@
                 <div class="recipe-content">
                     <h2>crafting table</h2>
                     <p>Use 4 wooden planks arranged in a 2x2 pattern.</p>
-                    <img src="images/crafting table.png" width="300">
+                    <img src="images/crafting table craften.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
