--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <div class="recipe-content">
                     <h2>sign</h2>
                     <p>You need six planks of any wood type and one stick. Place the stick in the center and the planks around it.</p>
-                    <img src="images/sign.png" width="300">
+                    <img src="images/signe.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
