--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <div class="recipe-content">
                     <h2>lapis lazuli-block</h2>
                     <p>Place 9 lapis lazuli in a 3x3 grid to make a block.</p>
-                    <img src="images/lapis lazuli block" width="300">
+                    <img src="images/lapis lazuli block.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
