--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="recipe-content">
                     <h2>wooden slab</h2>
                     <p>Place the planks in the crafting table's bottom row, with three planks in a row, to produce a wooden slab.</p>
-                    <img src="images/wood slab.png" width="300">
+                    <img src="images/wooden slab.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
@@ -293,7 +293,7 @@
                 <div class="recipe-content">
                     <h2>bookshelf</h2>
                     <p>Use 6 planks and 3 books. Place planks top and bottom, and books in the middle row.</p>
-                    <img src="images/bookshelf.png" width="300">
+                    <img src="images/book shelf.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
@@ -304,7 +304,7 @@
                 <div class="recipe-content">
                     <h2>sand block</h2>
                     <p>Place four sand blocks in a 2x2 grid to create sandstone.</p>
-                    <img src="images/sandstone.png" width="300">
+                    <img src="images/sand block.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
@@ -348,7 +348,7 @@
                 <div class="recipe-content">
                     <h2>jack-o-laterne</h2>
                     <p>Combine a carved pumpkin with a torch underneath in the crafting grid.</p>
-                    <img src="images/jack-o-lantern.png" width="300">
+                    <img src="images/jack-o-laterne.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
@@ -425,7 +425,7 @@
                 <div class="recipe-content">
                     <h2>stone brick</h2>
                     <p>Place 4 stones in the 3x3 crafting grid.</p>
-                    <img src="images/stone bricks.png" width="300">
+                    <img src="images/stone brick.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
@@ -487,7 +487,7 @@
                 </div>
             </div>
             
-            <div id="quartz blcok" class="recipe" style="display: none;">
+            <div id="quartz block" class="recipe" style="display: none;">
                 <div class="recipe-content">
                     <h2>quartz block</h2>
                     <p>Place 4 nether quartz in the 3x3 crafting grid.</p>
