--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 <div class="recipe-content">
                     <h2>quartz block</h2>
                     <p>Place 4 nether quartz in the 3x3 crafting grid.</p>
-                    <img src="/images/quartz block.png" width="300">
+                    <img src="images/quartz block.png" width="300">
                 </div>
                 <div class="recipe-footer">
                     <button onclick="backToStart()">Back to start</button>
